2003-02-24  Jean-Claude Wippler  <jcw@equi4.com>

	* starkit.tcl: more contexts, panic ok if "." already gone

2003-02-23  Jeff Hobbs  <jeffh@ActiveState.com>

	* configure: regen
	* configure.in:
	* tclconfig/tcl.m4: regen from latest TEA setup
	* Makefile.in: only use pkgIndex.tcl with shared builds
	Handle RUNTIME_SOURCES properly when srcdir == top_builddir

2003-02-21  Vince Darley <vincentdarley@sourceforge.net>

	* doc/vfs.n:
	* library/*.tcl: added missing 'recursive' flag to most
        .tcl 'removedirectory' implementations.
	
	* library/mk4vfs.tcl: added catch around 'after cancel'
	
2003-02-21  Vince Darley <vincentdarley@sourceforge.net>

	* generic/vfs.c: some small cleanup
	* doc/vfs.n: better documentation for 'createdirectory'
	* library/mk4vfs.tcl: better posix adherence.
	* library/vfsUtils.tcl: typo fix.
	
2003-02-20  Vince Darley <vincentdarley@sourceforge.net>

	* generic/vfs.c: completed use of internalerror and posix handling
	for all functions.
	* doc/vfs.n:
	* doc/vfslib.n: more documentation regarding handling of errors
	and use of the 'internalerror' feature.
	
        Around the time Tcl 8.4.2 is released we should increment tclvfs's
	version to 1.3 and make a proper release.  In the meantime,
	improvements to all .tcl implementations (esp. proper error
	handling) would be greatly appreciated.
	
2003-02-20  Andreas Kupries  <andreask@activestate.com>

	* library/mk4vfs.tcl: Switching to canceling the stored after id
	  of the periodic commit in _unmount instead of canceling by
	  script. The scripts in '_umount' and 'periodicCommit' were
	  different, causing the cancel to fail, and thus an eternal
	  commit, failing after the close; hanging the system.

2003-02-20  Vince Darley <vincentdarley@sourceforge.net>

	* generic/vfs.c: added new debugging feature 'vfs::filesystem
	internalerror ?script?'  which can be used to specify a script to
	evaluate when any tclvfs implementation throws a standard Tcl