@@ -39,7 +39,7 @@ proc loadvfs {dll} {
 }
 
 package ifneeded vfs 1.2 [list loadvfs $dll]
-package ifneeded starkit 1.1 [list source [file join $dir starkit.tcl]]
+package ifneeded starkit 1.2 [list source [file join $dir starkit.tcl]]
 package ifneeded vfslib 1.3.1 [list source [file join $dir vfslib.tcl]]
 
 # Old
